# Volante

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: libopencm3.cmake  stm32.cmake
src/: CMakeLists.txt  brake.c  brake.h  driverADC.c  driverADC.h  driver_encoder.c  driver_encoder.h  gamepad.c  gamepad.h  main.c  main.h  paddleShifter.c  paddleShifter.h  pedals.c  pedals.h  steering.c  steering.h  steering_driver.c  steering_driver.h  steering_driver_private.h  steering_encoder.c  steering_encoder.h  steering_potentiometer.c  steering_potentiometer.h  throttle.c  throttle.h
src/usbdrv/: usbconfig.h
stm32f103/: CMakeLists.txt  led.c  led.h  main.c  usb.c  usb.h
test/: spy_usbdrv.h  stub_adc.h  stub_pcint0.h  stub_portb.h  test_brake.c  test_driverADC.c  test_driver_encoder.c  test_gamepad.c  test_main.c  test_paddleShifter.c  test_pedals.c  test_steering.c  test_steering_driver.c  test_steering_encoder.c  test_steering_potentiometer.c  test_throttle.c
